--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -206,7 +206,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-label { /*color: #ced7d9;*/ color: #ffffff; float: right; font-size: 14px; font-weight: bold; line-height: 18px; margin-right: 5px; padding-bottom: 2px;}
 .airvis-select:hover .airvis-value { background-color: #ffffff;}
 .airvis-select:hover .airvis-label { color: #ffffff;}
-.airvis-selectBox { background-color: #ffffff; padding: 2px 0 3px; position: absolute; width: 50px; z-index: 1;
+.airvis-selectBox { background-color: #ffffff; position: absolute; width: 50px; z-index: 1;
 
   -webkit-border-radius: 2px; 
   -moz-border-radius: 2px; 
@@ -215,8 +215,9 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 }
 .airvis-selectBoxdown { top: 0; right: 0;}
 .airvis-selectBoxup { bottom: 0; right: 0;}
-.airvis-selectBox > a { display: block; text-align: center; font-size: 12px; font-weight: bold; text-decoration: none; color: #002a3a; line-height: 15px;}
-.airvis-selectBox > a.active { color: #00aeef;}
+.airvis-selectBoxInner { padding: 2px 0 3px; }
+.airvis-selectBoxInner > a { display: block; text-align: center; font-size: 12px; font-weight: bold; text-decoration: none; color: #002a3a; line-height: 15px;}
+.airvis-selectBoxInner > a.active { color: #00aeef;}
 /*
 .airvis-selectBox > a:hover { color: #586971;}
 .airvis-selectBox > a.active:hover { color: #6bc6f3;}
