--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -1,6 +1,7 @@
 
 /* overall container */
 document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif;}
+body { min-width: 100%; width: 100%;}
 .airvis-container { margin: 0; padding: 0; position: absolute; top: 0; left: 0; right: 0; bottom: 0; }
 
 * { -webkit-font-smoothing: antialiased}
