--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -178,7 +178,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-player-timeWindow.airvis-active { background-color: #ced828;}
 .airvis-player-timeWindow.airvis-inactive { background-color: #fbd72c;}
 .airvis-player-timeWindow.airvis-local { background-color: #b0d3d8; padding-top: 15px;}
-.airvis-player-timeText { float: left; font-size: 14px; font-weight: bold; line-height: 20px; margin: 19px 10px 10px 10px; margin-left: 0; width: 70px;}
+.airvis-player-timeText { float: left; font-size: 14px; font-weight: bold; line-height: 20px; margin: 19px 0 10px 10px; margin-left: 0; width: 70px;}
 .airvis-player-timeText.airvis-active { color: #ced828;}
 .airvis-player-timeText.airvis-inactive { color: #fbd72c;}
 .airvis-player-timeText.airvis-local { color: #b0d3d8;}
@@ -234,7 +234,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 
 
 /* Select */
-.airvis-player-selects  { float: left; width: 400px; padding-top: 5px;}
+.airvis-player-selects  { float: left; width: 260px; padding-top: 5px;}
 .airvis-selectContainer { float: left; position: relative; width: 120px; margin: 5px;}
 .airvis-select { text-decoration: none;}
 .airvis-value { color: #002a3a; display: block; float: right; font-size: 12px; font-weight: bold; background-color: rgba(255,255,255, 0.75); padding: 0; text-align: center; width: 50px; min-height: 20px;
@@ -308,10 +308,18 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 	white-space: nowrap;
 }
 
+/*
 .gmap {}
 .gmap > div > .gmnoprint:nth-child(3n+1),
 .gmap > div > .gmnoprint:last-child { top: 40px !important;}
-
+*/
+.gmap > div > .gmnoprint:nth-child(3n+1) {
+  top: 47px !important;
+}
+.gmap > div > .gmnoprint:last-child {
+  top: 55px !important;
+  right: 20px !important;
+}
 
 .airvis-scrollbar .overview { position: absolute; left: 0; top: 0; }
 .airvis-scrollbar .thumb .end,.airvis-scrollbar .thumb { background-color: #003D5D; }
@@ -375,4 +383,8 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .setProfVisualMode {
     background-position: 0 -30px;
     display: block;
+}
+.airvisVisualMode_full {
+  top: 60px;
+  right: 150px;
 }
